# Fast_API

./: .gitignore  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1109b6c495d4_create_all_tables.py  3e1919c98165_.py
api/: users.py
api/crud/: course.py  user.py
api/models/: __init__.py  course.py  user.py
api/routers/: course.py  user.py
db/: __init__.py  db_setup.py
schemas/: course.py  user.py
