[project]
name = "fast-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Jamezfn",email = "jamesmakachia19@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn (>=0.38.0,<0.39.0)",
    "fastapi (>=0.121.2,<0.122.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "psycopg[binary] (>=3.2.13,<4.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
